--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<title>WELCOME!</title>
+		<link rel="stylesheet" href="css/styles.css">
+		<title>HOME - Welcome!</title>
 	</head>
 	<body>
-		<h2 style="font-family:Helvetica,sans-serif">PIERRE SOCRATES</h2>
-		<h2 style="margin-top:-25px; font-family:Helvetica,sans-serif">LOUIS-JACQUES</h2>
+		<h2 id="my_name">PIERRE SOCRATES</h2>
+		<h2 id="my_name_1">LOUIS-JACQUES</h2>
 		<hr>
+		<div id="main">
+			<h1> SOFTWARE DEVELOPPER </h4>
+			<h4> ANIMATED IMAGE </h4>
+		 </div>
+		 <div id="footer">
+			<ul id="menu">
+				<li><a href="" style="text-decoration:none"> PROJECTS </a> 
+				<li><a href="" style="text-decoration:none"> ABOUT </a> 
+				<li><a href="" style="text-decoration:none"> CONTACT </a> 
+			</ul>
+		</div>
 	</body>
 
 </html>
