--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="css/styles.css">
-		<title>Home</title>
+		<title>Contact</title>
 	</head>
 	<body>
 		<div id="header">
@@ -12,10 +12,7 @@
 		</div>
 		<hr>
 		<div id="main">
-			<h1> SOFTWARE DEVELOPPER </h4>
-			<div id="animated_image">
-			<h4> ANIMATED IMAGE </h4>
-			</div>
+			<h1> Contact </h4>
 		 </div>
 		 <div id="footer">
 			<ul id="menu">
