about: download link, css: media query, projects: div, js: color menu based on page

--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,49 @@
 		</div>
 		<hr>
 		<div id="main">
-			<h1> PROJECTS </h4>
-		 </div>
-		 <div id="footer">
+			<h1> PROJECTS </h1>
+			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
+				<div class="project_image" style="width:200px; height:200px; display:block; background-color:red">
+				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
+				</div>
+				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
+					<h4>RAICUP 2019</h4>
+				</div>
+			</div>
+			<div style="width:404px; margin-left:auto; margin-right:auto; margin-top:90px; margin-bottom:370px;">
+				<div class="project_image" style="width:200px; height:200px; float:left; background-color:green">
+				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
+				</div>
+				<div class="project_description" style="width:200px; height:200px; float:right; background-color:yellow">
+					<h4> RAICUP 2020 </h4>
+				</div>
+			</div>
+			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
+				<div class="project_image" style="width:200px; height:200px;  display:block; background-color:red">
+				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
+				</div>
+				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
+					<h4>KINI</h4>
+				</div>
+			</div>
+			<div style="width:404px; margin-left:auto; margin-right:auto; margin-top:90px; margin-bottom:370px;">
+				<div class="project_image" style="width:200px; height:200px; float:left; background-color:green">
+				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
+				</div>
+				<div class="project_description" style="width:200px; height:200px; float:right; background-color:yellow">
+				   <h4> PERSONAL WEBSITE </h4>
+				</div>
+			</div>
+			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
+				<div class="project_image" style="width:200px; height:200px;  display:block; background-color:red">
+				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
+				</div>
+				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
+					<h4> BANK WEBSITE </h4>
+				</div>
+			</div>
+			<div style="width:10px; height:100px"></div>
+		 <div id="footer" >
 			<ul id="menu">
 				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
 				<li><a href="projects.html" style="text-decoration:none"> PROJECTS </a> 
