--- a/about.html
+++ b/about.html
@@ -11,9 +11,10 @@
 		<h2 id="my_name_1">LOUIS-JACQUES</h2>
 		</div>
 		<hr>
-		<div id="main">
-			<h1> ABOUT </h4>
+		 <div style="margin-left:auto; margin-right:auto; width:200px; height:200px; background-color: red;">
+			To download my resume use this <a href="./docs/resume.txt" download> LINK </a>
 		 </div>
+		 <div style="margin-top:100px"></div>
 		 <div id="footer">
 			<ul id="menu">
 				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
