--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
 				<li><a href="projects.html" style="text-decoration:none"> PROJECTS </a> 
 				<li><a href="about.html" style="text-decoration:none"> ABOUT </a> 
-				<li><a href="contact.html" style="text-decoration:none"> CONTACT </a> 
+				<li><a id="contact" href="contact.html" style="text-decoration:none"> CONTACT </a> 
 			</ul>
 		</div>
 
