Started using pug files. Modified the css of the index and fixed menu. Now the font-size decreases when we hover over a menu link. Made the two names of the same length by adjusting the font size.

--- a/about.html
+++ b/about.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="css/styles.css">
-		<title>About</title>
-	</head>
-	<body>
-		<div id="header">
-		<h2 id="my_name">PIERRE SOCRATES</h2>
-		<h2 id="my_name_1">LOUIS-JACQUES</h2>
-		</div>
-		<hr>
-		 <div style="margin-left:auto; margin-right:auto; width:200px; height:200px; background-color: red;">
-			To download my resume use this <a href="./docs/resume.txt" download> LINK </a>
-		 </div>
-		 <div style="margin-top:100px"></div>
-		 <div id="footer">
-			<ul id="menu">
-				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
-				<li><a href="projects.html" style="text-decoration:none"> PROJECTS </a> 
-				<li><a href="about.html" style="text-decoration:none"> ABOUT </a> 
-				<li><a href="contact.html" style="text-decoration:none"> CONTACT </a> 
-			</ul>
-		</div>
-
-	<script src="js/jquery-3.5.1.js"></script>
-	<script src="js/velocity.js"></script>
-	<script src="js/anime-3.2.1.js"></script>
-	<script src="js/animations.js"></script>
-	</body>
-
+<html lang="en">
+  <head> 
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>About</title>
+  </head>
+  <body>
+    <div id="header">
+      <h2 id="my_name">PIERRE SOCRATES</h2>
+      <h2 id="my_name_1">LOUIS-JACQUES</h2>
+    </div>
+    <hr>
+    <div id="About">
+      <h4>ABOUT</h4>
+    </div>
+    <div id="footer">
+      <div id="div_menu">
+        <ul id="menu">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/anime-3.2.1.js"></script>
+    <script src="js/animations.js"></script>
+  </body>
 </html>
