--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="css/styles.css">
-		<title>Home</title>
-	</head>
-	<body>
-		<div id="header">
-		<h2 id="my_name">PIERRE SOCRATES</h2>
-		<h2 id="my_name_1">LOUIS-JACQUES</h2>
-		</div>
-		<hr>
-		<div id="main">
-			<h1> SOFTWARE DEVELOPPER </h4>
-			<div id="animated_image">
-			<h4> ANIMATED IMAGE </h4>
-			</div>
-		 </div>
-		 <div id="footer">
-			<ul id="menu">
-				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
-				<li><a href="projects.html" style="text-decoration:none"> PROJECTS </a> 
-				<li><a href="about.html" style="text-decoration:none"> ABOUT </a> 
-				<li><a id="contact" href="contact.html" style="text-decoration:none"> CONTACT </a> 
-			</ul>
-		</div>
-
-	<script src="js/jquery-3.5.1.js"></script>
-	<script src="js/velocity.js"></script>
-	<script src="js/anime-3.2.1.js"></script>
-	<script src="js/animations.js"></script>
-	</body>
-
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Home</title>
+  </head>
+  <body>
+    <div id="header">
+      <h2 id="my_name">PIERRE SOCRATES</h2>
+      <h2 id="my_name_1">LOUIS-JACQUES</h2>
+    </div>
+    <hr>
+    <div id="home_wrapper">
+      <div id="home_content">
+        <h1>SOFTWARE DEVELOPPER</h1><img src="img/image_animated.png">
+      </div>
+    </div>
+    <div id="footer">
+      <div id="div_menu">
+        <ul id="menu">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/anime-3.2.1.js"></script>
+    <script src="js/animations.js"></script>
+  </body>
 </html>
