--- a/projects.html
+++ b/projects.html
@@ -1,72 +1,35 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="css/styles.css">
-		<title>Projects</title>
-	</head>
-	<body>
-		<div id="header">
-		<h2 id="my_name">PIERRE SOCRATES</h2>
-		<h2 id="my_name_1">LOUIS-JACQUES</h2>
-		</div>
-		<hr>
-		<div id="main">
-			<h1> PROJECTS </h1>
-			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
-				<div class="project_image" style="width:200px; height:200px; display:block; background-color:red">
-				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
-				</div>
-				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
-					<h4>RAICUP 2019</h4>
-				</div>
-			</div>
-			<div style="width:404px; margin-left:auto; margin-right:auto; margin-top:90px; margin-bottom:370px;">
-				<div class="project_image" style="width:200px; height:200px; float:left; background-color:green">
-				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
-				</div>
-				<div class="project_description" style="width:200px; height:200px; float:right; background-color:yellow">
-					<h4> RAICUP 2020 </h4>
-				</div>
-			</div>
-			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
-				<div class="project_image" style="width:200px; height:200px;  display:block; background-color:red">
-				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
-				</div>
-				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
-					<h4>KINI</h4>
-				</div>
-			</div>
-			<div style="width:404px; margin-left:auto; margin-right:auto; margin-top:90px; margin-bottom:370px;">
-				<div class="project_image" style="width:200px; height:200px; float:left; background-color:green">
-				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
-				</div>
-				<div class="project_description" style="width:200px; height:200px; float:right; background-color:yellow">
-				   <h4> PERSONAL WEBSITE </h4>
-				</div>
-			</div>
-			<div style="width:200px; margin-left:auto; margin-right:auto; display:block">
-				<div class="project_image" style="width:200px; height:200px;  display:block; background-color:red">
-				 <img src="img/scalable_1.jpg" style="height:100%; width:100%; object-fit:cover">
-				</div>
-				<div class="project_description" style="width:200px; display:block;  background-color:yellow">
-					<h4> BANK WEBSITE </h4>
-				</div>
-			</div>
-			<div style="width:10px; height:100px"></div>
-		 <div id="footer" >
-			<ul id="menu">
-				<li><a href="index.html" style="text-decoration:none"> HOME </a> 
-				<li><a href="projects.html" style="text-decoration:none"> PROJECTS </a> 
-				<li><a href="about.html" style="text-decoration:none"> ABOUT </a> 
-				<li><a href="contact.html" style="text-decoration:none"> CONTACT </a> 
-			</ul>
-		</div>
-
-	<script src="js/jquery-3.5.1.js"></script>
-	<script src="js/velocity.js"></script>
-	<script src="js/anime-3.2.1.js"></script>
-	<script src="js/animations.js"></script>
-	</body>
-
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Projects</title>
+  </head>
+  <body>
+    <div id="header">
+      <h2 id="my_name">PIERRE SOCRATES</h2>
+      <h2 id="my_name_1">LOUIS-JACQUES</h2>
+    </div>
+    <hr>
+    <div class="project"> 
+      <div class="project_image"><img src="img/img.png"></div>
+      <div class="project_description">
+        <h4>KINI</h4>
+        <p>A TEMPLATED DATA STRUCTURE LIBRAY.</p><a href="https://github.com/1pierres1u/kini">GITHUB LINK</a>
+      </div>
+    </div>
+    <div id="footer">
+      <div id="div_menu">
+        <ul id="menu">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/anime-3.2.1.js"></script>
+    <script src="js/animations.js"></script>
+  </body>
 </html>
