--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,20 @@
       <h2 id="my_name_1">LOUIS-JACQUES</h2>
     </div>
     <hr>
-    <div class="project"> 
-      <div class="project_image"><img src="img/img.png"></div>
-      <div class="project_description">
-        <h4>KINI</h4>
-        <p>A TEMPLATED DATA STRUCTURE LIBRAY.</p><a href="https://github.com/1pierres1u/kini">GITHUB LINK</a>
+    <div class="center">
+      <div class="project"> 
+        <div class="project_image"><img src="img/kini.png"></div>
+        <div class="project_description">
+          <p>KINI: A TEMPLATED DATA STRUCTURE LIBRAY.<a href="https://github.com/1pierres1u/kini">GITHUB LINK</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="center">
+      <div class="project"> 
+        <div class="project_image"><img src="img/kini.png"></div>
+        <div class="project_description">
+          <p>KINI: A TEMPLATED DATA STRUCTURE LIBRAY.<a href="https://github.com/1pierres1u/kini">GITHUB LINK</a></p>
+        </div>
       </div>
     </div>
     <div id="footer">
