--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <hr>
     <div class="center">
       <div class="project"> 
-        <div class="project_image"><img src="img/kini.png"></div>
+        <div class="project_image"><img src="img/kini.PNG"></div>
         <div class="project_description">
           <p>KINI: A TEMPLATED DATA STRUCTURE LIBRAY.<a href="https://github.com/1pierres1u/kini">GITHUB LINK</a></p>
         </div>
