The font-style of the menu is now Helvetica,sans-serif. When hovered and visiited the links become blue.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     <div id="home_wrapper">
       <div id="home_content">
-        <h1>SOFTWARE DEVELOPPER</h1><img src="img/image_animated.png">
+        <h1>SOFTWARE DEVELOPER</h1><img src="img/image_animated.png">
       </div>
     </div>
     <div id="footer">
