Replaced the image of the index page.Add a red bar at the bottom of the menu links. Change the color of the background and text. Added fillers and a css grid wrapper for the pages about.html and contact.html

--- a/about.html
+++ b/about.html
@@ -11,8 +11,21 @@
       <h2 id="my_name_1">LOUIS-JACQUES</h2>
     </div>
     <hr>
-    <div id="About">
-      <h4>ABOUT</h4>
+    <div id="about_wrapper">
+      <div id="about_content">
+        <div class="text_content">
+          <h3>About me </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+        </div>
+        <div class="text_content">
+          <h3>Interest </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+        </div>
+        <div class="text_content">
+          <h3>Education  </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+        </div>
+      </div>
     </div>
     <div id="footer">
       <div id="div_menu">
