--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     <div id="home_wrapper">
       <div id="home_content">
-        <h1>SOFTWARE DEVELOPER</h1><img src="img/image_animated.png">
+        <h1>SOFTWARE DEVELOPER</h1><img id="bar_1" src="img/img_bar.png"><img id="bar_2" src="img/img_bar.png"><img id="bar_3" src="img/img_bar.png"><img id="bar_4" src="img/img_bar.png"><img id="bar_5" src="img/img_bar.png">
       </div>
     </div>
     <div id="footer">
