--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,18 @@
       <h2 id="my_name_1">LOUIS-JACQUES</h2>
     </div>
     <hr>
-    <div>
-      <h1>CONTACT</h1>
+    <div id="contact_wrapper">
+      <div id="contact_content">
+        <div class="text_content">
+          <h3>Email me </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+        </div>
+        <div class="text_content">
+          <h3>LinkedIn </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+        </div>
+        <div class="text_content"></div>
+      </div>
     </div>
   </body>
   <div id="footer">
