Added a media query to control the layout of the page about.html. Put the project description div before the project image.

--- a/about.html
+++ b/about.html
@@ -15,7 +15,13 @@
       <div id="about_content">
         <div class="text_content">
           <h3>About me </h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+            <totam>rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae </totam>
+            <dicta>sunt explicabo.  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, </dicta>
+            <sed>quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro </sed>
+            <quisquam>est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non </quisquam>
+            <numquam>eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</numquam>
+          </p>
         </div>
         <div class="text_content">
           <h3>Interest </h3>
