--- a/projects.html
+++ b/projects.html
@@ -10,21 +10,40 @@
       <h2 id="my_name">PIERRE SOCRATES</h2>
       <h2 id="my_name_1">LOUIS-JACQUES</h2>
     </div>
-    <hr>
     <div class="center">
       <div class="project"> 
         <div class="project_description">
-          <p>KINI: A TEMPLATED DATA STRUCTURE LIBRAY.<a href="https://github.com/1pierres1u/kini">GITHUB LINK</a></p>
+          <h4>KINI </h4>
+          <p>Templated data structure library.  <a href="https://github.com/1pierres1u/kini">github link</a></p>
         </div>
-        <div class="project_image"><img src="img/kini.PNG"></div>
+        <div class="project_image"><img src="img/kini_1.PNG"></div>
       </div>
     </div>
     <div class="center">
       <div class="project"> 
         <div class="project_description">
-          <p>KINI: A TEMPLATED DATA STRUCTURE LIBRAY.<a href="https://github.com/1pierres1u/kini">GITHUB LINK</a></p>
+          <h4>BANK-CONSOLE </h4>
+          <p> Banking app. <a href="https://github.com/1pierres1u/kini">github link</a></p>
         </div>
-        <div class="project_image"><img src="img/kini.PNG"></div>
+        <div class="project_image"><img src="img/bank.PNG"></div>
+      </div>
+    </div>
+    <div class="center">
+      <div class="project"> 
+        <div class="project_description">
+          <h4>RAICUP 2020 </h4>
+          <p> Artificial intelligence competition. <a href="https://github.com/1pierres1u/kini">github link</a></p>
+        </div>
+        <div class="project_image"><img src="img/raicup2020.PNG"></div>
+      </div>
+    </div>
+    <div class="center">
+      <div class="project"> 
+        <div class="project_description">
+          <h4>PERSONAL WEBSITE</h4>
+          <p> My Website. <a href="https://github.com/1pierres1u/kini">github link</a></p>
+        </div>
+        <div class="project_image"><img src="img/personal_website.PNG"></div>
       </div>
     </div>
     <div id="footer">
