--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="home_wrapper">
       <div id="home_content">
-        <h1>SOFTWARE DEVELOPER</h1><img id="bar_1" src="img/img_bar.png"><img id="bar_2" src="img/img_bar.png"><img id="bar_3" src="img/img_bar.png"><img id="bar_4" src="img/img_bar.png"><img id="bar_5" src="img/img_bar.png">
+        <h1>SOFTWARE DEVELOPER</h1><img id="bar_1" src="img/img_bar_white.png"><img id="bar_2" src="img/img_bar_white.png"><img id="bar_3" src="img/img_bar_white.png"><img id="bar_4" src="img/img_bar_white.png"><img id="bar_5" src="img/img_bar_white.png">
       </div>
     </div>
     <div id="footer">
@@ -28,5 +28,6 @@
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/anime-3.2.1.js"></script>
     <script src="js/animations.js"></script>
+    <script src="js/center.js"></script>
   </body>
 </html>
