--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
     <div id="contact_wrapper">
       <div id="contact_content">
         <div class="text_content">
-          <h3>Email me </h3>
+          <h3>EMAIL ME </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
         </div>
         <div class="text_content">
-          <h3>LinkedIn </h3>
+          <h3>LINKEDIN </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. </p>
         </div>
         <div class="text_content"></div>
