--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     </div>
     <div id="home_wrapper">
       <div id="home_content">
-        <h1>SOFTWARE DEVELOPER</h1><img id="bar_1" src="img/img_bar_white.png"><img id="bar_2" src="img/img_bar_white.png"><img id="bar_3" src="img/img_bar_white.png"><img id="bar_4" src="img/img_bar_white.png"><img id="bar_5" src="img/img_bar_white.png">
+        <h1>SOFTWARE DEVELOPER</h1>
+        <div class="bar" id="bar_1"></div>
+        <div class="bar" id="bar_2"></div>
+        <div class="bar" id="bar_3"></div>
+        <div class="bar" id="bar_4"></div>
+        <div class="bar" id="bar_5"></div>
       </div>
     </div>
     <div id="footer">
